--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,10 @@
 language: c
-os:
-  - linux
-  - osx
-compiler:
-  - clang
-  - gcc
 install:
   - ./.travis/install.sh
-script:
-  - ./.travis/run.sh
+script: /bin/true
 env:
   global:
-   - secure: "1qAHFxnz0gIxMMl9DAVzoPvVSpOacWT2G6ItcaoaVe1r4OANzpoHBlbyHX2I/1KFe+BohzjS9kXA4NrlPaL81qfvu9E6qZ9yai/+0gHdzZttB2uvdyFXyDVye3CHHDlYMfRRQf6C+eYs5CKeedWq9Q3arO1GyAWiL9RcW1466sg="
-  matrix:
-    - LLDPD_CONFIG_ARGS=""
-    - LLDPD_CONFIG_ARGS="--with-embedded-libevent"
-    - LLDPD_CONFIG_ARGS="--disable-privsep --with-snmp"
-    - LLDPD_CONFIG_ARGS="--with-snmp --with-xml --with-json --disable-lldpmed --disable-dot1 --disable-dot3"
+    - secure: "1qAHFxnz0gIxMMl9DAVzoPvVSpOacWT2G6ItcaoaVe1r4OANzpoHBlbyHX2I/1KFe+BohzjS9kXA4NrlPaL81qfvu9E6qZ9yai/+0gHdzZttB2uvdyFXyDVye3CHHDlYMfRRQf6C+eYs5CKeedWq9Q3arO1GyAWiL9RcW1466sg="
 addons:
   coverity_scan:
     project:
